webpack.config - corected dev-server path

--- a/src/assets/styles/_global.css
+++ b/src/assets/styles/_global.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(35, 22, 218);
   color: #bcbdba;
-  font-size: rem;
+  font-size: 2rem;
 
   .btn {
     font-weight: bold;
