--- a/src/assets/styles/_global.css
+++ b/src/assets/styles/_global.css
@@ -1,15 +1,7 @@
 body {
   background-color: rgb(35, 22, 218);
-  color: #bcbdba;
-  font-size: 2rem;
+  color: #aedd4e;
 
-  .btn {
-    font-weight: bold;
-    padding: 10px;
-    border-radius: 5px;
-    color: black;
-    background-color: rgb(102, 47, 255);
-  }
   .brand {
     width: 300px;
     height: 200px;
