--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,3 +1,3 @@
-@import "_global";
-@import "_measure";
-@import "_measureME";
+/* @import "_global"; */
+@import "_measure.css";
+@import "_measureME.css";
