--- a/src/assets/styles/_measure.css
+++ b/src/assets/styles/_measure.css
@@ -4,9 +4,9 @@
   top: 10px;
   right: 10px;
   min-width: 230px;
-  padding: 5px 16px;
-  background-color: rgba(0, 0, 0, 0.479);
-  color: var(--gray-100);
+  padding: 10px 16px;
+  background-color: #0d6dfdd0;
+  color: black;
   border: 2px solid red;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.63);
   opacity: 0;
@@ -24,6 +24,7 @@
     position: absolute;
     top: 0px;
     right: 5px;
+    padding: 2px;
     font-weight: var(--fw-600-semibold);
     transform: scaleX(1.5);
     transform-origin: 100% 0;
